--- a/src/animation/PreLoader.css
+++ b/src/animation/PreLoader.css
@@ -1,7 +1,7 @@
 .preloader {
   height: 100vh;
   width: 100%;
-  background: black;
+  background: rgb(119, 182, 162);
   color: white;
   position: fixed;
   bottom: 0;
