--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -5,6 +5,7 @@
   border: 1px solid #ccc;
   border-radius: 5px;
   background-color: #f9f9f9;
+  margin-top: 10vh;
 }
 
 h2 {
@@ -19,6 +20,7 @@ h2 {
 .form-label {
   font-weight: bold;
   display: block;
+  margin-top: 5px;
   margin-bottom: 5px;
 }
 
@@ -28,8 +30,9 @@ h2 {
   font-size: 16px;
 }
 
-button[type="submit"] {
+.loginBtn {
   width: 100%;
   padding: 10px;
   font-size: 16px;
+  margin-top: 5%;
 }
