--- a/src/components/SignUp.css
+++ b/src/components/SignUp.css
@@ -5,6 +5,7 @@
   border: 1px solid #ccc;
   border-radius: 5px;
   background-color: #f9f9f9;
+  margin-top: 10vh;
 }
 
 h2 {
@@ -28,8 +29,9 @@ h2 {
   font-size: 16px;
 }
 
-.sbtButton {
+.sbtBtn {
   width: 100%;
   padding: 10px;
   font-size: 16px;
+  margin-top: 5%;
 }
