background for login fixed

--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -1,4 +1,4 @@
-.bodyarea {
+.body {
   background-image: url("https://cdn.pixabay.com/photo/2017/10/25/19/46/piggy-2889044_1280.jpg");
   background-repeat: no-repeat;
   background-size: cover;
